===============================================
Changes for Lovelysystems Elasticsearch Plugins
===============================================

Unreleased
==========

2013/07/05 0.8.0
================

 - minor changes due to changed constructor of HashedBytesArray

 - elasticsearch 0.90.2 compatibility

2013/06/18 0.7.1
================

 - fixed serialization error in the DistinctDateHistogram (#6)

 - improved error message in exceptions

2013/06/10 0.7.0
================

 - elasticsearch 0.90.1 compatibility

2013/05/28 0.6.0
================

 - renamed package and namespace

 - removed 'Uncached facets'

 - elasticsearch 0.90.0 compatibility

2013/03/05 0.5.0
================

 - added Long type support to latest facet

2012/08/12 0.4.2
================

 - fix cast exception in distinct date histogram


2012/08/12 0.4.1
================

 - fix stream handling in distinct date histogram

2012/08/11 0.4.0
================

 - added Long type support to distinct date histogram facet

2012/06/29 0.3.1
================

 - added "total" field to latest facet, which contains the number of
   distinct keys seen.

 - bugfix: error when start is greater than number of results in
   latest facet

2012/06/27 0.3.0
================

 - added "Latest" facet

 - elasticsearch 0.19.x compatibility