@@ -5,6 +5,9 @@ Changes for Lovelysystems Elasticsearch Plugins
 Unreleased
 ==========
 
+ - fixed a NullPointerException that occured if a facet query was done with the
+   TransportClient on a "client only node" (See #8)
+
 2013/07/05 0.8.0
 ================
 
